unifying rest methods ids
